Remove duplicates from Android keys

--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -624,7 +624,7 @@
         <!--<option value="118">KEY_KPPLUSMINUS</option>-->
         <option value="BREAK">BREAK</option>
         <!--<option value="120">(undefined)</option>-->
-        <option value="NUMPAD_COMMA">NUMPAD_COMMA</option>
+        <!--    <option value="NUMPAD_COMMA">NUMPAD_COMMA</option>-->
         <option value="KANA">KANA</option>
         <option value="EISU">EISU</option>
         <option value="YEN">YEN</option>
@@ -642,7 +642,7 @@
         <!--<option value="136">KEY_FIND</option>-->
         <option value="CUT">CUT</option>
         <!--<option value="138">KEY_HELP</option>-->
-        <option value="MENU">MENU</option>
+        <!--    <option value="MENU">MENU</option>-->
         <option value="CALCULATOR">CALCULATOR</option>
         <!--<option value="141">KEY_SETUP</option>-->
         <option value="SLEEP">SLEEP</option>
@@ -655,7 +655,7 @@
         <!--<option value="149">KEY_PROG2</option>-->
         <option value="EXPLORER">EXPLORER</option>
         <!--<option value="151">KEY_MSDOS</option>-->
-        <option value="POWER">POWER</option>
+        <!--    <option value="POWER">POWER</option>-->
         <!--<option value="153">KEY_DIRECTION</option>-->
         <!--<option value="154">KEY_CYCLEWINDOWS</option>-->
         <option value="ENVELOPE">ENVELOPE</option>
@@ -665,11 +665,11 @@
         <option value="FORWARD">FORWARD</option>
         <option value="MEDIA_CLOSE">MEDIA_CLOSE</option>
         <option value="MEDIA_EJECT">MEDIA_EJECT</option>
-        <option value="MEDIA_EJECT">MEDIA_EJECT</option>
+        <!--    <option value="MEDIA_EJECT">MEDIA_EJECT</option>-->
         <option value="MEDIA_NEXT">MEDIA_NEXT</option>
         <option value="MEDIA_PLAY_PAUSE">MEDIA_PLAY_PAUSE</option>
         <option value="MEDIA_PREVIOUS">MEDIA_PREVIOUS</option>
-        <option value="MEDIA_STOP">MEDIA_STOP</option>
+        <!--    <option value="MEDIA_STOP">MEDIA_STOP</option>-->
         <option value="MEDIA_RECORD">MEDIA_RECORD</option>
         <option value="MEDIA_REWIND">MEDIA_REWIND</option>
         <option value="CALL">CALL</option>
@@ -680,8 +680,8 @@
         <!--<option value="174">KEY_EXIT</option>-->
         <!--<option value="175">KEY_MOVE</option>-->
         <!--<option value="176">KEY_EDIT</option>-->
-        <option value="PAGE_UP">PAGE_UP</option>
-        <option value="PAGE_DOWN">PAGE_DOWN</option>
+        <!--    <option value="PAGE_UP">PAGE_UP</option>-->
+        <!--    <option value="PAGE_DOWN">PAGE_DOWN</option>-->
         <option value="NUMPAD_LEFT_PAREN">NUMPAD_LEFT_PAREN</option>
         <option value="NUMPAD_RIGHT_PAREN">NUMPAD_RIGHT_PAREN</option>
         <!--<option value="181">KEY_NEW</option>-->
@@ -703,22 +703,22 @@
         <!--<option value="197">(undefined)</option>-->
         <!--<option value="198">(undefined)</option>-->
         <!--<option value="199">(undefined)</option>-->
-        <option value="MEDIA_PLAY">MEDIA_PLAY</option>
+        <!--    <option value="MEDIA_PLAY">MEDIA_PLAY</option>-->
         <option value="MEDIA_PAUSE">MEDIA_PAUSE</option>
         <!--<option value="202">KEY_PROG3</option>-->
         <!--<option value="203">KEY_PROG4</option>-->
         <option value="NOTIFICATION">NOTIFICATION</option>
         <!--<option value="205">KEY_SUSPEND</option>-->
         <!--<option value="206">KEY_CLOSE</option>-->
-        <option value="MEDIA_PLAY">MEDIA_PLAY</option>
+        <!--    <option value="MEDIA_PLAY">MEDIA_PLAY</option>-->
         <option value="MEDIA_FAST_FORWARD">MEDIA_FAST_FORWARD</option>
         <!--<option value="209">KEY_BASSBOOST</option>-->
         <!--<option value="210">KEY_PRINT</option>-->
         <!--<option value="211">KEY_HP</option>-->
         <option value="CAMERA">CAMERA</option>
-        <option value="MUSIC">MUSIC</option>
+        <!--    <option value="MUSIC">MUSIC</option>-->
         <!--<option value="214">KEY_QUESTION</option>-->
-        <option value="ENVELOPE">ENVELOPE</option>
+        <!--    <option value="ENVELOPE">ENVELOPE</option>-->
         <!--<option value="216">KEY_CHAT</option>-->
         <option value="SEARCH">SEARCH</option>
         <!--<option value="218">KEY_CONNECT</option>-->
@@ -746,22 +746,22 @@
         <option value="BUTTON_14">BUTTON_14</option>
         <option value="BUTTON_15">BUTTON_15</option>
         <option value="BUTTON_16">BUTTON_16</option>
-        <option value="BUTTON_1">BUTTON_1</option>
-        <option value="BUTTON_2">BUTTON_2</option>
-        <option value="BUTTON_3">BUTTON_3</option>
-        <option value="BUTTON_4">BUTTON_4</option>
-        <option value="BUTTON_5">BUTTON_5</option>
-        <option value="BUTTON_6">BUTTON_6</option>
-        <option value="BUTTON_7">BUTTON_7</option>
-        <option value="BUTTON_8">BUTTON_8</option>
-        <option value="BUTTON_9">BUTTON_9</option>
-        <option value="BUTTON_10">BUTTON_10</option>
-        <option value="BUTTON_11">BUTTON_11</option>
-        <option value="BUTTON_12">BUTTON_12</option>
-        <option value="BUTTON_13">BUTTON_13</option>
-        <option value="BUTTON_14">BUTTON_14</option>
-        <option value="BUTTON_15">BUTTON_15</option>
-        <option value="BUTTON_16">BUTTON_16</option>
+        <!--    <option value="BUTTON_1">BUTTON_1</option>-->
+        <!--    <option value="BUTTON_2">BUTTON_2</option>-->
+        <!--    <option value="BUTTON_3">BUTTON_3</option>-->
+        <!--    <option value="BUTTON_4">BUTTON_4</option>-->
+        <!--    <option value="BUTTON_5">BUTTON_5</option>-->
+        <!--    <option value="BUTTON_6">BUTTON_6</option>-->
+        <!--    <option value="BUTTON_7">BUTTON_7</option>-->
+        <!--    <option value="BUTTON_8">BUTTON_8</option>-->
+        <!--    <option value="BUTTON_9">BUTTON_9</option>-->
+        <!--    <option value="BUTTON_10">BUTTON_10</option>-->
+        <!--    <option value="BUTTON_11">BUTTON_11</option>-->
+        <!--    <option value="BUTTON_12">BUTTON_12</option>-->
+        <!--    <option value="BUTTON_13">BUTTON_13</option>-->
+        <!--    <option value="BUTTON_14">BUTTON_14</option>-->
+        <!--    <option value="BUTTON_15">BUTTON_15</option>-->
+        <!--    <option value="BUTTON_16">BUTTON_16</option>-->
         <option value="BUTTON_A">BUTTON_A</option>
         <option value="BUTTON_B">BUTTON_B</option>
         <option value="BUTTON_C">BUTTON_C</option>
