--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -18,6 +18,10 @@
         td:not(:last-child) {
             padding-right: 8px;
         }
+
+        td:last-child {
+            text-align: right;
+        }
     </style>
 </head>
 <body>
@@ -53,6 +57,10 @@
                 <tr>
                     <td>
                         <button id="add" type="button">Add key map</button>
+                    </td>
+                    <td></td>
+                    <td>
+                        <button id="removeAll" type="button">Remove all</button>
                     </td>
                 </tr>
             </tfoot>
@@ -899,12 +907,14 @@
         let mappingId = 0;
 
         const addButton = document.querySelector("#add");
+        const removeAllButton = document.querySelector("#removeAll");
         const linuxKeyCodesTemplate = document.querySelector("#linux-keycodes");
         const androidKeysTemplate = document.querySelector("#android-keys");
         const tbody = document.querySelector("#tbody");
 
         addMapping();
         addButton.addEventListener("click", addMapping);
+        removeAllButton.addEventListener("click", removeAllMappings);
 
         function addMapping() {
             mappingId++;
@@ -943,6 +953,10 @@
             function removeTableRow(target) {
                 target.closest("tr").remove();
             }
+        }
+
+        function removeAllMappings() {
+            tbody.replaceChildren();
         }
     </script>
 </div>
