100% width for form & table

--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -7,6 +7,14 @@
     <title>ExKeyMo > Simple</title>
     <link rel="stylesheet" href="/common.css">
     <style>
+        form {
+            width: 100%;
+        }
+
+        table {
+            width: 100%;
+        }
+
         th {
             text-align: left;
         }
