--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -171,6 +171,14 @@ map key 58 ESCAPE
 map key 1 CAPS_LOCK
 </pre>
 
+    <h2>Validation</h2>
+    <p>
+        Unfortunately Android won't warn you if loaded KCM-file is incorrect and what errors are there.
+        But there is <a target="_blank" href="https://ris58h.github.io/validatekeymaps/">web-version</a>
+        of <a target="_blank" href="https://source.android.com/docs/core/interaction/input/validate-keymaps">validatekeymaps</a> tool
+        to validate the syntax of your KCM-file.
+    </p>
+
     <h2>Limitations</h2>
     <p>
         Only two keyboard layouts are supported. It may be changed in the future.
