--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -74,55 +74,15 @@
             </tfoot>
         </table>
         <p>
-            <label>Base layout:</label>
-            <select name="layout" style="display: block;">
+            <label style="display: block;">Base layout:</label>
+            <select id="layout" name="layout" style="display: block;">
                 <option value="" selected>Default</option>
-                <option value="keyboard_layout_arabic.kcm">Arabic</option>
-                <option value="keyboard_layout_azerbaijani.kcm">Azerbaijan</option>
-                <option value="keyboard_layout_belarusian.kcm">Belarusian</option>
-                <option value="keyboard_layout_belgian.kcm">Belgian</option>
-                <option value="keyboard_layout_brazilian.kcm">Brazilian</option>
-                <option value="keyboard_layout_bulgarian.kcm">Bulgarian</option>
-                <option value="keyboard_layout_bulgarian_phonetic.kcm">Bulgarian (phonetic)</option>
-                <option value="keyboard_layout_croatian_and_slovenian.kcm">Croatian and Slovenian</option>
-                <option value="keyboard_layout_czech.kcm">Czech (EU - qwertz)</option>
-                <option value="keyboard_layout_czech_qwerty.kcm">Czech (EU - qwerty)</option>
-                <option value="keyboard_layout_danish.kcm">Danish</option>
-                <option value="keyboard_layout_english_uk.kcm">English (UK)</option>
-                <option value="keyboard_layout_english_us.kcm">English (US)</option>
-                <option value="keyboard_layout_english_us_colemak.kcm">English (US), Colemak</option>
-                <option value="keyboard_layout_english_us_dvorak.kcm">English (US), Dvorak</option>
-                <option value="keyboard_layout_english_us_intl.kcm">English (US), International</option>
-                <option value="keyboard_layout_english_us_workman.kcm">English (US), Workman</option>
-                <option value="keyboard_layout_estonian.kcm">Estonian</option>
-                <option value="keyboard_layout_finnish.kcm">Finnish</option>
-                <option value="keyboard_layout_french.kcm">French</option>
-                <option value="keyboard_layout_french_ca.kcm">French (Canada)</option>
-                <option value="keyboard_layout_georgian.kcm">Georgian</option>
-                <option value="keyboard_layout_german.kcm">German</option>
-                <option value="keyboard_layout_greek.kcm">Greek</option>
-                <option value="keyboard_layout_hebrew.kcm">Hebrew</option>
-                <option value="keyboard_layout_hungarian.kcm">Hungarian</option>
-                <option value="keyboard_layout_icelandic.kcm">Icelandic</option>
-                <option value="keyboard_layout_italian.kcm">Italian</option>
-                <option value="keyboard_layout_latvian_qwerty.kcm">Latvian</option>
-                <option value="keyboard_layout_lithuanian.kcm">Lithuanian</option>
-                <option value="keyboard_layout_mongolian.kcm">Mongolian</option>
-                <option value="keyboard_layout_norwegian.kcm">Norwegian</option>
-                <option value="keyboard_layout_persian.kcm">Persian</option>
-                <option value="keyboard_layout_polish.kcm">Polish</option>
-                <option value="keyboard_layout_portuguese.kcm">Portuguese</option>
-                <option value="keyboard_layout_russian.kcm">Russian</option>
-                <option value="keyboard_layout_russian_mac.kcm">Russian, Mac</option>
-                <option value="keyboard_layout_slovak.kcm">Slovak</option>
-                <option value="keyboard_layout_spanish.kcm">Spanish</option>
-                <option value="keyboard_layout_spanish_latin.kcm">Spanish (Latin)</option>
-                <option value="keyboard_layout_swedish.kcm">Swedish</option>
-                <option value="keyboard_layout_swiss_french.kcm">Swiss French</option>
-                <option value="keyboard_layout_swiss_german.kcm">Swiss German</option>
-                <option value="keyboard_layout_turkish.kcm">Turkish</option>
-                <option value="keyboard_layout_turkish_f.kcm">Turkish F</option>
-                <option value="keyboard_layout_ukrainian.kcm">Ukrainian</option>
+            </select>
+            <label style="display: block;">Second base layout:</label>
+            <select id="layout2" name="layout2" style="display: block;">
+<!--                TODO: don't send the field in case of None-->
+                <option value="-" selected>None</option>
+                <option value="">Default</option>
             </select>
         </p>
         <input type="submit" value="Download">
@@ -910,6 +870,54 @@
         <option value="PROFILE_SWITCH">PROFILE_SWITCH</option>
         <option value="ALL_APPS">ALL_APPS</option>
     </template>
+    <template id="layouts">
+        <option value="keyboard_layout_arabic.kcm">Arabic</option>
+        <option value="keyboard_layout_azerbaijani.kcm">Azerbaijan</option>
+        <option value="keyboard_layout_belarusian.kcm">Belarusian</option>
+        <option value="keyboard_layout_belgian.kcm">Belgian</option>
+        <option value="keyboard_layout_brazilian.kcm">Brazilian</option>
+        <option value="keyboard_layout_bulgarian.kcm">Bulgarian</option>
+        <option value="keyboard_layout_bulgarian_phonetic.kcm">Bulgarian (phonetic)</option>
+        <option value="keyboard_layout_croatian_and_slovenian.kcm">Croatian and Slovenian</option>
+        <option value="keyboard_layout_czech.kcm">Czech (EU - qwertz)</option>
+        <option value="keyboard_layout_czech_qwerty.kcm">Czech (EU - qwerty)</option>
+        <option value="keyboard_layout_danish.kcm">Danish</option>
+        <option value="keyboard_layout_english_uk.kcm">English (UK)</option>
+        <option value="keyboard_layout_english_us.kcm">English (US)</option>
+        <option value="keyboard_layout_english_us_colemak.kcm">English (US), Colemak</option>
+        <option value="keyboard_layout_english_us_dvorak.kcm">English (US), Dvorak</option>
+        <option value="keyboard_layout_english_us_intl.kcm">English (US), International</option>
+        <option value="keyboard_layout_english_us_workman.kcm">English (US), Workman</option>
+        <option value="keyboard_layout_estonian.kcm">Estonian</option>
+        <option value="keyboard_layout_finnish.kcm">Finnish</option>
+        <option value="keyboard_layout_french.kcm">French</option>
+        <option value="keyboard_layout_french_ca.kcm">French (Canada)</option>
+        <option value="keyboard_layout_georgian.kcm">Georgian</option>
+        <option value="keyboard_layout_german.kcm">German</option>
+        <option value="keyboard_layout_greek.kcm">Greek</option>
+        <option value="keyboard_layout_hebrew.kcm">Hebrew</option>
+        <option value="keyboard_layout_hungarian.kcm">Hungarian</option>
+        <option value="keyboard_layout_icelandic.kcm">Icelandic</option>
+        <option value="keyboard_layout_italian.kcm">Italian</option>
+        <option value="keyboard_layout_latvian_qwerty.kcm">Latvian</option>
+        <option value="keyboard_layout_lithuanian.kcm">Lithuanian</option>
+        <option value="keyboard_layout_mongolian.kcm">Mongolian</option>
+        <option value="keyboard_layout_norwegian.kcm">Norwegian</option>
+        <option value="keyboard_layout_persian.kcm">Persian</option>
+        <option value="keyboard_layout_polish.kcm">Polish</option>
+        <option value="keyboard_layout_portuguese.kcm">Portuguese</option>
+        <option value="keyboard_layout_russian.kcm">Russian</option>
+        <option value="keyboard_layout_russian_mac.kcm">Russian, Mac</option>
+        <option value="keyboard_layout_slovak.kcm">Slovak</option>
+        <option value="keyboard_layout_spanish.kcm">Spanish</option>
+        <option value="keyboard_layout_spanish_latin.kcm">Spanish (Latin)</option>
+        <option value="keyboard_layout_swedish.kcm">Swedish</option>
+        <option value="keyboard_layout_swiss_french.kcm">Swiss French</option>
+        <option value="keyboard_layout_swiss_german.kcm">Swiss German</option>
+        <option value="keyboard_layout_turkish.kcm">Turkish</option>
+        <option value="keyboard_layout_turkish_f.kcm">Turkish F</option>
+        <option value="keyboard_layout_ukrainian.kcm">Ukrainian</option>
+    </template>
 
     <script>
         let mappingId = 0;
@@ -919,10 +927,16 @@
         const linuxKeyCodesTemplate = document.querySelector("#linux-keycodes");
         const androidKeysTemplate = document.querySelector("#android-keys");
         const tbody = document.querySelector("#tbody");
+        const layout = document.querySelector("#layout");
+        const layout2 = document.querySelector("#layout2");
+        const layoutsTemplate = document.querySelector("#layouts");
 
         addMapping();
         addButton.addEventListener("click", addMapping);
         removeAllButton.addEventListener("click", removeAllMappings);
+
+        layout.appendChild(layoutsTemplate.content.cloneNode(true));
+        layout2.appendChild(layoutsTemplate.content.cloneNode(true));
 
         function addMapping() {
             mappingId++;
