Modifier keys optiongroup

--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -89,6 +89,17 @@
     </form>
 
     <template id="linux-keycodes">
+        <optgroup label="Modifier keys">
+            <option value="58">CAPS_LOCK</option>
+            <option value="42">SHIFT_LEFT</option>
+            <option value="54">SHIFT_RIGHT</option>
+            <option value="29">CTRL_LEFT</option>
+            <option value="97">CTRL_RIGHT</option>
+            <option value="56">ALT_LEFT</option>
+            <option value="100">ALT_RIGHT</option>
+            <option value="125">META_LEFT</option>
+            <option value="126">META_RIGHT</option>
+        </optgroup>
         <option value="1">ESCAPE</option>
         <option value="2">1</option>
         <option value="3">2</option>
@@ -117,7 +128,6 @@
         <option value="26">LEFT_BRACKET</option>
         <option value="27">RIGHT_BRACKET</option>
         <option value="28">ENTER</option>
-        <option value="29">CTRL_LEFT</option>
         <option value="30">A</option>
         <option value="31">S</option>
         <option value="32">D</option>
@@ -130,7 +140,6 @@
         <option value="39">SEMICOLON</option>
         <option value="40">APOSTROPHE</option>
         <option value="41">GRAVE</option>
-        <option value="42">SHIFT_LEFT</option>
         <option value="43">BACKSLASH</option>
         <option value="44">Z</option>
         <option value="45">X</option>
@@ -142,11 +151,8 @@
         <option value="51">COMMA</option>
         <option value="52">PERIOD</option>
         <option value="53">SLASH</option>
-        <option value="54">SHIFT_RIGHT</option>
         <option value="55">NUMPAD_MULTIPLY</option>
-        <option value="56">ALT_LEFT</option>
         <option value="57">SPACE</option>
-        <option value="58">CAPS_LOCK</option>
         <option value="59">F1</option>
         <option value="60">F2</option>
         <option value="61">F3</option>
@@ -185,10 +191,8 @@
         <option value="94">MUHENKAN</option>
         <option value="95">NUMPAD_COMMA</option>
         <option value="96">NUMPAD_ENTER</option>
-        <option value="97">CTRL_RIGHT</option>
         <option value="98">NUMPAD_DIVIDE</option>
         <option value="99">SYSRQ</option>
-        <option value="100">ALT_RIGHT</option>
         <!--<option value="101">KEY_LINEFEED</option>-->
         <option value="102">MOVE_HOME</option>
         <option value="103">DPAD_UP</option>
@@ -213,8 +217,6 @@
         <option value="122">KANA</option>
         <option value="123">EISU</option>
         <option value="124">YEN</option>
-        <option value="125">META_LEFT</option>
-        <option value="126">META_RIGHT</option>
         <option value="127">MENU</option>
         <option value="128">MEDIA_STOP</option>
         <!--<option value="129">KEY_AGAIN</option>-->
@@ -480,6 +482,17 @@
         <option value="usage 0x0c01A2">ALL_APPS</option>
     </template>
     <template id="android-keys">
+        <optgroup label="Modifier keys">
+            <option value="CAPS_LOCK">CAPS_LOCK</option>
+            <option value="SHIFT_LEFT">SHIFT_LEFT</option>
+            <option value="SHIFT_RIGHT">SHIFT_RIGHT</option>
+            <option value="CTRL_LEFT">CTRL_LEFT</option>
+            <option value="CTRL_RIGHT">CTRL_RIGHT</option>
+            <option value="ALT_LEFT">ALT_LEFT</option>
+            <option value="ALT_RIGHT">ALT_RIGHT</option>
+            <option value="META_LEFT">META_LEFT</option>
+            <option value="META_RIGHT">META_RIGHT</option>
+        </optgroup>
         <option value="ESCAPE">ESCAPE</option>
         <option value="1">1</option>
         <option value="2">2</option>
@@ -508,7 +521,6 @@
         <option value="LEFT_BRACKET">LEFT_BRACKET</option>
         <option value="RIGHT_BRACKET">RIGHT_BRACKET</option>
         <option value="ENTER">ENTER</option>
-        <option value="CTRL_LEFT">CTRL_LEFT</option>
         <option value="A">A</option>
         <option value="S">S</option>
         <option value="D">D</option>
@@ -521,7 +533,6 @@
         <option value="SEMICOLON">SEMICOLON</option>
         <option value="APOSTROPHE">APOSTROPHE</option>
         <option value="GRAVE">GRAVE</option>
-        <option value="SHIFT_LEFT">SHIFT_LEFT</option>
         <option value="BACKSLASH">BACKSLASH</option>
         <option value="Z">Z</option>
         <option value="X">X</option>
@@ -533,11 +544,8 @@
         <option value="COMMA">COMMA</option>
         <option value="PERIOD">PERIOD</option>
         <option value="SLASH">SLASH</option>
-        <option value="SHIFT_RIGHT">SHIFT_RIGHT</option>
         <option value="NUMPAD_MULTIPLY">NUMPAD_MULTIPLY</option>
-        <option value="ALT_LEFT">ALT_LEFT</option>
         <option value="SPACE">SPACE</option>
-        <option value="CAPS_LOCK">CAPS_LOCK</option>
         <option value="F1">F1</option>
         <option value="F2">F2</option>
         <option value="F3">F3</option>
@@ -576,10 +584,8 @@
         <option value="MUHENKAN">MUHENKAN</option>
         <option value="NUMPAD_COMMA">NUMPAD_COMMA</option>
         <option value="NUMPAD_ENTER">NUMPAD_ENTER</option>
-        <option value="CTRL_RIGHT">CTRL_RIGHT</option>
         <option value="NUMPAD_DIVIDE">NUMPAD_DIVIDE</option>
         <option value="SYSRQ">SYSRQ</option>
-        <option value="ALT_RIGHT">ALT_RIGHT</option>
         <!--<option value="101">KEY_LINEFEED</option>-->
         <option value="MOVE_HOME">MOVE_HOME</option>
         <option value="DPAD_UP">DPAD_UP</option>
@@ -604,8 +610,6 @@
         <option value="KANA">KANA</option>
         <option value="EISU">EISU</option>
         <option value="YEN">YEN</option>
-        <option value="META_LEFT">META_LEFT</option>
-        <option value="META_RIGHT">META_RIGHT</option>
         <option value="MENU">MENU</option>
         <option value="MEDIA_STOP">MEDIA_STOP</option>
         <!--<option value="129">KEY_AGAIN</option>-->
