Letters and Numbers

--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -114,54 +114,58 @@
             <option value="102">MOVE_HOME</option>
             <option value="107">MOVE_END</option>
         </optgroup>
+        <optgroup label="Letters">
+            <option value="30">A</option>
+            <option value="48">B</option>
+            <option value="46">C</option>
+            <option value="32">D</option>
+            <option value="18">E</option>
+            <option value="33">F</option>
+            <option value="34">G</option>
+            <option value="35">H</option>
+            <option value="23">I</option>
+            <option value="36">J</option>
+            <option value="37">K</option>
+            <option value="38">L</option>
+            <option value="50">M</option>
+            <option value="49">N</option>
+            <option value="24">O</option>
+            <option value="25">P</option>
+            <option value="16">Q</option>
+            <option value="19">R</option>
+            <option value="31">S</option>
+            <option value="20">T</option>
+            <option value="22">U</option>
+            <option value="47">V</option>
+            <option value="17">W</option>
+            <option value="45">X</option>
+            <option value="21">Y</option>
+            <option value="44">Z</option>
+        </optgroup>
+        <optgroup label="Numbers">
+            <option value="2">1</option>
+            <option value="3">2</option>
+            <option value="4">3</option>
+            <option value="5">4</option>
+            <option value="6">5</option>
+            <option value="7">6</option>
+            <option value="8">7</option>
+            <option value="9">8</option>
+            <option value="10">9</option>
+            <option value="11">0</option>
+        </optgroup>
         <option value="1">ESCAPE</option>
-        <option value="2">1</option>
-        <option value="3">2</option>
-        <option value="4">3</option>
-        <option value="5">4</option>
-        <option value="6">5</option>
-        <option value="7">6</option>
-        <option value="8">7</option>
-        <option value="9">8</option>
-        <option value="10">9</option>
-        <option value="11">0</option>
         <option value="12">MINUS</option>
         <option value="13">EQUALS</option>
         <option value="14">DEL</option>
         <option value="15">TAB</option>
-        <option value="16">Q</option>
-        <option value="17">W</option>
-        <option value="18">E</option>
-        <option value="19">R</option>
-        <option value="20">T</option>
-        <option value="21">Y</option>
-        <option value="22">U</option>
-        <option value="23">I</option>
-        <option value="24">O</option>
-        <option value="25">P</option>
         <option value="26">LEFT_BRACKET</option>
         <option value="27">RIGHT_BRACKET</option>
         <option value="28">ENTER</option>
-        <option value="30">A</option>
-        <option value="31">S</option>
-        <option value="32">D</option>
-        <option value="33">F</option>
-        <option value="34">G</option>
-        <option value="35">H</option>
-        <option value="36">J</option>
-        <option value="37">K</option>
-        <option value="38">L</option>
         <option value="39">SEMICOLON</option>
         <option value="40">APOSTROPHE</option>
         <option value="41">GRAVE</option>
         <option value="43">BACKSLASH</option>
-        <option value="44">Z</option>
-        <option value="45">X</option>
-        <option value="46">C</option>
-        <option value="47">V</option>
-        <option value="48">B</option>
-        <option value="49">N</option>
-        <option value="50">M</option>
         <option value="51">COMMA</option>
         <option value="52">PERIOD</option>
         <option value="53">SLASH</option>
@@ -507,54 +511,58 @@
             <option value="MOVE_HOME">MOVE_HOME</option>
             <option value="MOVE_END">MOVE_END</option>
         </optgroup>
+        <optgroup label="Letters">
+            <option value="A">A</option>
+            <option value="B">B</option>
+            <option value="C">C</option>
+            <option value="D">D</option>
+            <option value="E">E</option>
+            <option value="F">F</option>
+            <option value="G">G</option>
+            <option value="H">H</option>
+            <option value="I">I</option>
+            <option value="J">J</option>
+            <option value="K">K</option>
+            <option value="L">L</option>
+            <option value="M">M</option>
+            <option value="N">N</option>
+            <option value="O">O</option>
+            <option value="P">P</option>
+            <option value="Q">Q</option>
+            <option value="R">R</option>
+            <option value="S">S</option>
+            <option value="T">T</option>
+            <option value="U">U</option>
+            <option value="V">V</option>
+            <option value="W">W</option>
+            <option value="X">X</option>
+            <option value="Y">Y</option>
+            <option value="Z">Z</option>
+        </optgroup>
+        <optgroup label="Numbers">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="0">0</option>
+        </optgroup>
         <option value="ESCAPE">ESCAPE</option>
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-        <option value="6">6</option>
-        <option value="7">7</option>
-        <option value="8">8</option>
-        <option value="9">9</option>
-        <option value="0">0</option>
         <option value="MINUS">MINUS</option>
         <option value="EQUALS">EQUALS</option>
         <option value="DEL">DEL</option>
         <option value="TAB">TAB</option>
-        <option value="Q">Q</option>
-        <option value="W">W</option>
-        <option value="E">E</option>
-        <option value="R">R</option>
-        <option value="T">T</option>
-        <option value="Y">Y</option>
-        <option value="U">U</option>
-        <option value="I">I</option>
-        <option value="O">O</option>
-        <option value="P">P</option>
         <option value="LEFT_BRACKET">LEFT_BRACKET</option>
         <option value="RIGHT_BRACKET">RIGHT_BRACKET</option>
         <option value="ENTER">ENTER</option>
-        <option value="A">A</option>
-        <option value="S">S</option>
-        <option value="D">D</option>
-        <option value="F">F</option>
-        <option value="G">G</option>
-        <option value="H">H</option>
-        <option value="J">J</option>
-        <option value="K">K</option>
-        <option value="L">L</option>
         <option value="SEMICOLON">SEMICOLON</option>
         <option value="APOSTROPHE">APOSTROPHE</option>
         <option value="GRAVE">GRAVE</option>
         <option value="BACKSLASH">BACKSLASH</option>
-        <option value="Z">Z</option>
-        <option value="X">X</option>
-        <option value="C">C</option>
-        <option value="V">V</option>
-        <option value="B">B</option>
-        <option value="N">N</option>
-        <option value="M">M</option>
         <option value="COMMA">COMMA</option>
         <option value="PERIOD">PERIOD</option>
         <option value="SLASH">SLASH</option>
