--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -154,6 +154,20 @@
             <option value="10">9</option>
             <option value="11">0</option>
         </optgroup>
+        <optgroup label="Function">
+            <option value="59">F1</option>
+            <option value="60">F2</option>
+            <option value="61">F3</option>
+            <option value="62">F4</option>
+            <option value="63">F5</option>
+            <option value="64">F6</option>
+            <option value="65">F7</option>
+            <option value="66">F8</option>
+            <option value="67">F9</option>
+            <option value="68">F10</option>
+            <option value="87">F11</option>
+            <option value="88">F12</option>
+        </optgroup>
         <option value="1">ESCAPE</option>
         <option value="12">MINUS</option>
         <option value="13">EQUALS</option>
@@ -171,16 +185,6 @@
         <option value="53">SLASH</option>
         <option value="55">NUMPAD_MULTIPLY</option>
         <option value="57">SPACE</option>
-        <option value="59">F1</option>
-        <option value="60">F2</option>
-        <option value="61">F3</option>
-        <option value="62">F4</option>
-        <option value="63">F5</option>
-        <option value="64">F6</option>
-        <option value="65">F7</option>
-        <option value="66">F8</option>
-        <option value="67">F9</option>
-        <option value="68">F10</option>
         <option value="69">NUM_LOCK</option>
         <option value="70">SCROLL_LOCK</option>
         <option value="71">NUMPAD_7</option>
@@ -199,8 +203,6 @@
         <!--<option value="84">(undefined)</option>-->
         <option value="85">ZENKAKU_HANKAKU</option>
         <option value="86">BACKSLASH</option>
-        <option value="87">F11</option>
-        <option value="88">F12</option>
         <option value="89">RO</option>
         <!--<option value="90">KEY_KATAKANA</option>-->
         <!--<option value="91">KEY_HIRAGANA</option>-->
@@ -551,6 +553,20 @@
             <option value="9">9</option>
             <option value="0">0</option>
         </optgroup>
+        <optgroup label="Function">
+            <option value="F1">F1</option>
+            <option value="F2">F2</option>
+            <option value="F3">F3</option>
+            <option value="F4">F4</option>
+            <option value="F5">F5</option>
+            <option value="F6">F6</option>
+            <option value="F7">F7</option>
+            <option value="F8">F8</option>
+            <option value="F9">F9</option>
+            <option value="F10">F10</option>
+            <option value="F11">F11</option>
+            <option value="F12">F12</option>
+        </optgroup>
         <option value="ESCAPE">ESCAPE</option>
         <option value="MINUS">MINUS</option>
         <option value="EQUALS">EQUALS</option>
@@ -568,16 +584,6 @@
         <option value="SLASH">SLASH</option>
         <option value="NUMPAD_MULTIPLY">NUMPAD_MULTIPLY</option>
         <option value="SPACE">SPACE</option>
-        <option value="F1">F1</option>
-        <option value="F2">F2</option>
-        <option value="F3">F3</option>
-        <option value="F4">F4</option>
-        <option value="F5">F5</option>
-        <option value="F6">F6</option>
-        <option value="F7">F7</option>
-        <option value="F8">F8</option>
-        <option value="F9">F9</option>
-        <option value="F10">F10</option>
         <option value="NUM_LOCK">NUM_LOCK</option>
         <option value="SCROLL_LOCK">SCROLL_LOCK</option>
         <option value="NUMPAD_7">NUMPAD_7</option>
@@ -596,8 +602,6 @@
         <!--<option value="84">(undefined)</option>-->
         <option value="ZENKAKU_HANKAKU">ZENKAKU_HANKAKU</option>
         <option value="BACKSLASH">BACKSLASH</option>
-        <option value="F11">F11</option>
-        <option value="F12">F12</option>
         <option value="RO">RO</option>
         <!--<option value="90">KEY_KATAKANA</option>-->
         <!--<option value="91">KEY_HIRAGANA</option>-->
