--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -168,6 +168,23 @@
             <option value="87">F11</option>
             <option value="88">F12</option>
         </optgroup>
+        <optgroup label="Media">
+            <option value="128">MEDIA_STOP</option>
+            <option value="160">MEDIA_CLOSE_CD</option>
+            <option value="161">MEDIA_EJECT_CD</option>
+            <option value="162">MEDIA_EJECT_CLOSE_CD</option>
+            <option value="163">MEDIA_NEXT</option>
+            <option value="164">MEDIA_PLAY_PAUSE</option>
+            <option value="165">MEDIA_PREVIOUS</option>
+            <option value="166">MEDIA_STOP_CD</option>
+            <option value="167">MEDIA_RECORD</option>
+            <option value="168">MEDIA_REWIND</option>
+            <option value="200">MEDIA_PLAY_CD</option>
+            <option value="201">MEDIA_PAUSE_CD</option>
+            <option value="207">MEDIA_PLAY</option>
+            <option value="208">MEDIA_FAST_FORWARD</option>
+            <option value="usage 0x0c0173">MEDIA_AUDIO_TRACK</option>
+        </optgroup>
         <option value="1">ESCAPE</option>
         <option value="12">MINUS</option>
         <option value="13">EQUALS</option>
@@ -230,7 +247,6 @@
         <option value="123">EISU</option>
         <option value="124">YEN</option>
         <option value="127">MENU</option>
-        <option value="128">MEDIA_STOP</option>
         <!--<option value="129">KEY_AGAIN</option>-->
         <!--<option value="130">KEY_PROPS</option>-->
         <!--<option value="131">KEY_UNDO</option>-->
@@ -262,15 +278,6 @@
         <!--<option value="157">KEY_COMPUTER</option>-->
         <option value="158">BACK</option>
         <option value="159">FORWARD</option>
-        <option value="160">MEDIA_CLOSE</option>
-        <option value="161">MEDIA_EJECT</option>
-        <option value="162">MEDIA_EJECT</option>
-        <option value="163">MEDIA_NEXT</option>
-        <option value="164">MEDIA_PLAY_PAUSE</option>
-        <option value="165">MEDIA_PREVIOUS</option>
-        <option value="166">MEDIA_STOP</option>
-        <option value="167">MEDIA_RECORD</option>
-        <option value="168">MEDIA_REWIND</option>
         <option value="169">CALL</option>
         <!--<option value="170">KEY_ISO</option>-->
         <option value="171">MUSIC</option>
@@ -300,15 +307,11 @@
         <!--<option value="197">(undefined)</option>-->
         <!--<option value="198">(undefined)</option>-->
         <!--<option value="199">(undefined)</option>-->
-        <option value="200">MEDIA_PLAY</option>
-        <option value="201">MEDIA_PAUSE</option>
         <!--<option value="202">KEY_PROG3</option>-->
         <!--<option value="203">KEY_PROG4</option>-->
         <option value="204">NOTIFICATION</option>
         <!--<option value="205">KEY_SUSPEND</option>-->
         <!--<option value="206">KEY_CLOSE</option>-->
-        <option value="207">MEDIA_PLAY</option>
-        <option value="208">MEDIA_FAST_FORWARD</option>
         <!--<option value="209">KEY_BASSBOOST</option>-->
         <!--<option value="210">KEY_PRINT</option>-->
         <!--<option value="211">KEY_HP</option>-->
@@ -485,7 +488,6 @@
         <option value="usage 0x0c0067">WINDOW</option>
         <option value="usage 0x0c006F">BRIGHTNESS_UP</option>
         <option value="usage 0x0c0070">BRIGHTNESS_DOWN</option>
-        <option value="usage 0x0c0173">MEDIA_AUDIO_TRACK</option>
         <option value="usage 0x0c019C">PROFILE_SWITCH</option>
         <option value="usage 0x0c01A2">ALL_APPS</option>
     </template>
@@ -567,6 +569,23 @@
             <option value="F11">F11</option>
             <option value="F12">F12</option>
         </optgroup>
+        <optgroup label="Media">
+            <option value="MEDIA_STOP">MEDIA_STOP</option>
+            <option value="MEDIA_CLOSE">MEDIA_CLOSE</option>
+            <option value="MEDIA_EJECT">MEDIA_EJECT</option>
+            <!--    <option value="MEDIA_EJECT">MEDIA_EJECT</option>-->
+            <option value="MEDIA_NEXT">MEDIA_NEXT</option>
+            <option value="MEDIA_PLAY_PAUSE">MEDIA_PLAY_PAUSE</option>
+            <option value="MEDIA_PREVIOUS">MEDIA_PREVIOUS</option>
+            <!--    <option value="MEDIA_STOP">MEDIA_STOP</option>-->
+            <option value="MEDIA_RECORD">MEDIA_RECORD</option>
+            <option value="MEDIA_REWIND">MEDIA_REWIND</option>
+            <!--    <option value="MEDIA_PLAY">MEDIA_PLAY</option>-->
+            <option value="MEDIA_PAUSE">MEDIA_PAUSE</option>
+            <!--    <option value="MEDIA_PLAY">MEDIA_PLAY</option>-->
+            <option value="MEDIA_FAST_FORWARD">MEDIA_FAST_FORWARD</option>
+            <option value="MEDIA_AUDIO_TRACK">MEDIA_AUDIO_TRACK</option>
+        </optgroup>
         <option value="ESCAPE">ESCAPE</option>
         <option value="MINUS">MINUS</option>
         <option value="EQUALS">EQUALS</option>
@@ -629,7 +648,6 @@
         <option value="EISU">EISU</option>
         <option value="YEN">YEN</option>
         <option value="MENU">MENU</option>
-        <option value="MEDIA_STOP">MEDIA_STOP</option>
         <!--<option value="129">KEY_AGAIN</option>-->
         <!--<option value="130">KEY_PROPS</option>-->
         <!--<option value="131">KEY_UNDO</option>-->
@@ -661,15 +679,6 @@
         <!--<option value="157">KEY_COMPUTER</option>-->
         <option value="BACK">BACK</option>
         <option value="FORWARD">FORWARD</option>
-        <option value="MEDIA_CLOSE">MEDIA_CLOSE</option>
-        <option value="MEDIA_EJECT">MEDIA_EJECT</option>
-        <!--    <option value="MEDIA_EJECT">MEDIA_EJECT</option>-->
-        <option value="MEDIA_NEXT">MEDIA_NEXT</option>
-        <option value="MEDIA_PLAY_PAUSE">MEDIA_PLAY_PAUSE</option>
-        <option value="MEDIA_PREVIOUS">MEDIA_PREVIOUS</option>
-        <!--    <option value="MEDIA_STOP">MEDIA_STOP</option>-->
-        <option value="MEDIA_RECORD">MEDIA_RECORD</option>
-        <option value="MEDIA_REWIND">MEDIA_REWIND</option>
         <option value="CALL">CALL</option>
         <!--<option value="170">KEY_ISO</option>-->
         <option value="MUSIC">MUSIC</option>
@@ -701,15 +710,11 @@
         <!--<option value="197">(undefined)</option>-->
         <!--<option value="198">(undefined)</option>-->
         <!--<option value="199">(undefined)</option>-->
-        <!--    <option value="MEDIA_PLAY">MEDIA_PLAY</option>-->
-        <option value="MEDIA_PAUSE">MEDIA_PAUSE</option>
         <!--<option value="202">KEY_PROG3</option>-->
         <!--<option value="203">KEY_PROG4</option>-->
         <option value="NOTIFICATION">NOTIFICATION</option>
         <!--<option value="205">KEY_SUSPEND</option>-->
         <!--<option value="206">KEY_CLOSE</option>-->
-        <!--    <option value="MEDIA_PLAY">MEDIA_PLAY</option>-->
-        <option value="MEDIA_FAST_FORWARD">MEDIA_FAST_FORWARD</option>
         <!--<option value="209">KEY_BASSBOOST</option>-->
         <!--<option value="210">KEY_PRINT</option>-->
         <!--<option value="211">KEY_HP</option>-->
@@ -886,7 +891,6 @@
         <option value="WINDOW">WINDOW</option>
         <option value="BRIGHTNESS_UP">BRIGHTNESS_UP</option>
         <option value="BRIGHTNESS_DOWN">BRIGHTNESS_DOWN</option>
-        <option value="MEDIA_AUDIO_TRACK">MEDIA_AUDIO_TRACK</option>
         <option value="PROFILE_SWITCH">PROFILE_SWITCH</option>
         <option value="ALL_APPS">ALL_APPS</option>
     </template>
